# server/src/data-layer/models/User.ts
@@ -1,5 +1,4 @@
 export interface User {
-  username: string
   firstname: string
   lastname: string
   role?: 'user' | 'admin'
